# src/main/java/com/shield/module/file/entity/StoredFileStatus.java
@@ -1,0 +1,7 @@
+package com.shield.module.file.entity;
+
+public enum StoredFileStatus {
+    ACTIVE,
+    EXPIRED,
+    DELETED
+}
